k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: springboot-k8s:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8093
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8093
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8093
            initialDelaySeconds: 10
            periodSeconds: 5
